[gd_scene load_steps=9 format=2]

[ext_resource path="res://img/cross.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/bouncer.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 400, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 400, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 400, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 400 )

[sub_resource type="CircleShape2D" id=6]
radius = 22.2036

[node name="bouncer" type="KinematicBody2D" groups=[
"Enemies",
]]
z_index = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="crossDetectorUp" type="Area2D" parent="."]
rotation = -3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="crossDetectorUp"]
position = Vector2( 0, 410 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="crossDetectorRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="crossDetectorRight"]
position = Vector2( 410, 0 )
shape = SubResource( 3 )

[node name="crossDetectorLeft" type="Area2D" parent="."]
position = Vector2( 0, 410 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="crossDetectorLeft"]
position = Vector2( -410, -410 )
shape = SubResource( 4 )

[node name="crossDetectorDown" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="crossDetectorDown"]
position = Vector2( 0, 410 )
shape = SubResource( 5 )

[node name="baseEnemy" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="reloadTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="bouncerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bouncerHitbox"]
shape = SubResource( 6 )

[connection signal="area_entered" from="crossDetectorUp" to="." method="_on_crossDetectorUp_area_entered"]
[connection signal="area_exited" from="crossDetectorUp" to="." method="_on_crossDetectorUp_area_exited"]
[connection signal="area_entered" from="crossDetectorRight" to="." method="_on_crossDetectorRight_area_entered"]
[connection signal="area_exited" from="crossDetectorRight" to="." method="_on_crossDetectorRight_area_exited"]
[connection signal="area_entered" from="crossDetectorLeft" to="." method="_on_crossDetectorLeft_area_entered"]
[connection signal="area_exited" from="crossDetectorLeft" to="." method="_on_crossDetectorLeft_area_exited"]
[connection signal="area_entered" from="crossDetectorDown" to="." method="_on_crossDetectorDown_area_entered"]
[connection signal="area_exited" from="crossDetectorDown" to="." method="_on_crossDetectorDown_area_exited"]
[connection signal="timeout" from="reloadTimer" to="." method="_on_reloadTimer_timeout"]
[connection signal="area_entered" from="bouncerHitbox" to="." method="_on_bouncerHitbox_area_entered"]
